added trainers service
