# trainers-service/api/helpers/transformer/trainerMetadata.js
@@ -2,7 +2,7 @@
 
 trainerMetadata.prototype.trainer = {};
 
-function trainerMetadata(data, userId, tenantId, orgId) {
+function trainerMetadata(data, userId, tenantId, zoneId) {
     trainerMetadata.prototype.trainer = {};
     var typedata;
     if ((typeof data) === "string") {
@@ -12,11 +12,11 @@ function trainerMetadata(data, userId, tenantId, orgId) {
     }
 
     trainerMetadata.prototype.trainer.createdBy = userId;
-    trainerMetadata.prototype.trainer.orgId = orgId;
+    trainerMetadata.prototype.trainer.zoneId = zoneId;
     trainerMetadata.prototype.trainer.name = typedata.name;
     trainerMetadata.prototype.trainer.description = typedata.description;
-    trainerMetadata.prototype.trainer.logo = typedata.logo;
-    trainerMetadata.prototype.trainer.assignedStreamId = typedata.assignedStreamId;
+    trainerMetadata.prototype.trainer.photo = typedata.photo;
+    trainerMetadata.prototype.trainer.deparment = typedata.deparment;
     trainerMetadata.prototype.trainer.createdDTS = typedata.createdDTS;
 
 
